--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,11 +9,13 @@ provisioner:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
+  provider_name: chef
+  provider_version: 14
+
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
   - name: centos-7
 
 suites:
