--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,7 +10,9 @@ provisioner:
   always_update_cookbooks: true
 
   provider_name: chef
-  provider_version: 14
+  provider_version: 15
+  client_rb:
+    chef_license: accept
 
 verifier:
   name: inspec
